--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
         }
     ],
     "minimum-stability": "dev",
+    "autoload": {
+        "psr-0": {
+            "HelloWorld": "src/"
+        }
+    }
     "require": {}
 }
