--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "minimum-stability": "dev",
     "autoload": {
-        "psr-0": {
-            "HelloWorld": "src/"
+        "psr-4": {
+            "HelloWorld\\": "src/"
         }
     },
     "require": {}
