--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "minimum-stability": "dev",
-    prefer-stable: true,
+    "prefer-stable": "true",
     "autoload": {
         "psr-4": {
             "HelloWorld\\": "src/"
